--- a/00-Python Object and Data Structure Basics/04-Lists.ipynb
+++ b/00-Python Object and Data Structure Basics/04-Lists.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,7 +48,24 @@
    "outputs": [],
    "source": [
     "# Assign a list to an variable named my_list\n",
-    "my_list = [1,2,3]"
+    "l=[1,2,3,4,5,6,7,8,9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 8, 7, 6, 5, 4, 3, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(l[:-9:-1])"
    ]
   },
   {
@@ -53,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 289,
    "metadata": {
     "collapsed": true
    },
@@ -71,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +104,7 @@
        "4"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 291,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +143,7 @@
        "'one'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +164,7 @@
        "['two', 'three', 4, 5]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +185,7 @@
        "['one', 'two', 'three']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,22 +204,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['one', 'two', 'three', 4, 5, 'new item']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'my_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m my_list \u001b[38;5;241m+\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnew item\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'my_list' is not defined"
+     ]
     }
    ],
    "source": [
     "my_list + ['new item']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_leap(year):\n",
+    "    \n",
+    "    if ((year/4==0 and year/100!=0)or year/400==0):\n",
+    "        leap = True\n",
+    "    else:\n",
+    "        leap = False\n",
+    "    return leap\n",
+    "\n",
+    "year = int(input())\n",
+    "print(is_leap(year))"
    ]
   },
   {
@@ -207,18 +258,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['one', 'two', 'three', 4, 5]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'my_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m my_list\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'my_list' is not defined"
+     ]
     }
    ],
    "source": [
@@ -234,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 297,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +307,7 @@
        "['one', 'two', 'three', 4, 5, 'add new item permanently']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +345,7 @@
        " 'add new item permanently']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +366,7 @@
        "['one', 'two', 'three', 4, 5, 'add new item permanently']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 301,
    "metadata": {
     "collapsed": true
    },
@@ -356,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 302,
    "metadata": {
     "collapsed": true
    },
@@ -368,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +429,7 @@
        "[1, 2, 3, 'append me!']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +457,7 @@
        "1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +478,7 @@
        "[2, 3, 'append me!']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 306,
    "metadata": {
     "collapsed": true
    },
@@ -450,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +511,7 @@
        "'append me!'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 307,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +531,7 @@
        "[2, 3]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +560,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-22-af6d2015fa1f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlist1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "Cell \u001b[1;32mIn[309], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m list1[\u001b[38;5;241m100\u001b[39m]\n",
       "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -537,20 +589,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a', 'e', 'x', 'b', 'c']"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Show\n",
     "new_list"
@@ -570,20 +611,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['c', 'b', 'x', 'e', 'a']"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_list"
    ]
@@ -602,20 +632,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a', 'b', 'c', 'e', 'x']"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_list"
    ]
@@ -649,20 +668,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Show\n",
     "matrix"
@@ -677,20 +685,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Grab first item in matrix object\n",
     "matrix[0]"
@@ -698,20 +695,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Grab first item of the first item in the matrix object\n",
     "matrix[0][0]"
@@ -741,20 +727,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 4, 7]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "first_col"
    ]
@@ -771,7 +746,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -785,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
