--- a/00-Python Object and Data Structure Basics/01-Variable Assignment.ipynb
+++ b/00-Python Object and Data Structure Basics/01-Variable Assignment.ipynb
@@ -444,7 +444,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -458,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
