--- a/02-Python Statements/03-for Loops.ipynb
+++ b/02-Python Statements/03-for Loops.ipynb
@@ -519,7 +519,7 @@
    ],
    "source": [
     "# Create a dictionary view object\n",
-    "d.items()"
+    "d.items()"  //instead of D write d.items()
    ]
   },
   {
