Update 07-Statements Assessment Test.ipynb

--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -48,7 +48,9 @@
    },
    "outputs": [],
    "source": [
-    "#Code here"
+    "for word in st.split():\n",
+         if word[0] == 's':\n",
+            print(word)"
    ]
   },
   {
@@ -67,7 +69,7 @@
    },
    "outputs": [],
    "source": [
-    "#Code Here"
+    "list(range(0,11,2))"
    ]
   },
   {
@@ -86,8 +88,8 @@
    },
    "outputs": [],
    "source": [
-    "#Code in this cell\n",
-    "[]"
+    "\n",
+    "[x for x in range(1,51) if x%3 == 0]"
    ]
   },
   {
@@ -117,7 +119,9 @@
    },
    "outputs": [],
    "source": [
-    "#Code in this cell"
+    "for word in st.split():\n",
+    "    if len(word)%2 == 0:\n",
+    "       print(word+\" <-- has an even length!\")"
    ]
   },
   {
@@ -136,7 +140,15 @@
    },
    "outputs": [],
    "source": [
-    "#Code in this cell"
+    "for num in range(1,101):\n",
+    "    if num % 3 == 0 and num % 5 == 0:\n",
+    "       print(\"Fizzbuzz\")\n",
+    "    elif num % 3 == 0:\n",
+    "        print(\"Fizz\")\n",
+    "    elif num % 5 == 0:\n",
+    "        print(\"Buzz\")\n",
+    "    else:\n",
+    "         print(num)"
    ]
   },
   {
@@ -166,7 +178,7 @@
    },
    "outputs": [],
    "source": [
-    "#Code in this cell"
+    "[word[0] for word in st.split()]"
    ]
   },
   {
